--- a/css/main.css
+++ b/css/main.css
@@ -87,7 +87,7 @@ body{
 .buttons a{
     display: flex;
     margin-top: 1em;
-    margin-left: 15vh;
+    margin-left: 1em;
     font-size:  1.2rem;
     padding: .75em;
     border: 2px solid transparent;
@@ -113,8 +113,31 @@ body{
 
 footer{
 
+    position: relative;
     width: 100%;
-    padding: 2em 12%;
+    bottom: 0;
+    padding: 3em 12%;
     background: #7b00fe85;
+    display: flex;
+    justify-content: space-between;
 
+    .footer-left a{
+        font-size: 1.2rem;
+        margin-right: 2em;
+        color: white;
+    }
+
+}
+
+i{
+    
+    font-size: 2rem;
+    padding-right: 1em;
+    color: white;
+}
+
+img{
+    transform: scale(.9);
+    border: 10px solid white;
+    border-radius: 50%;
 }
