--- a/style.css
+++ b/style.css
@@ -42,14 +42,15 @@ a:hover{
 header{
     width: 100%;
     text-align: center;
-    a{
-        display: flex;
-        flex-direction: column;
-    }
 
     .menu{
         display: flex;
         justify-content: space-around;
+
+        a{
+            font-size: 20px;
+            font-weight: 500;
+        }
     }
 }
 
@@ -80,14 +81,6 @@ main{
         margin-bottom: 10px;
     }
 }
-
-.horizontal-divider{
-    position: relative;
-    display: block;
-    width: 100%;
-    height: 1px;
-    background-color:  var(--main-color);
-}    
 
 .images{
 
